# LaserBodyRoll

./: README.md
Documentation/: Architecture.graphml  CAN Bit timing.xlsx  Laser Rangefinder Body Roll Control Design Specification.docx  System BOM.xlsx
Hardware/: BOM.csv  BOM.xlsx  IO.sch  LaserBodyRoll.FCStd  LaserBodyRoll.FCStd1  LaserBodyRoll.bak  LaserBodyRoll.kicad_pcb  LaserBodyRoll.kicad_pcb-bak  LaserBodyRoll.net  LaserBodyRoll.pro  LaserBodyRoll.sch  LaserBodyRoll.xml  LaserBodyRoll1.FCStd  Logic.sch  Power.bak  Power.sch  Processor.sch  _saved_Power.sch  fp-info-cache  modlog.txt
Hardware/AOZBuck/: AOZBuck.FCStd  AOZBuck.bak  AOZBuck.kicad_pcb  AOZBuck.net  AOZBuck.pro  AOZBuck.sch  AOZBuck.xml  AOZBuck1.FCStd  AOZBuck1.FCStd1  AOZBuck1.step  bom.csv
Hardware/Buck/: AOZ1280 Design Note.xlsx
Hardware/IMU/: IMU_Board.FCStd  IMU_Board.FCStd1  IMU_Board.bak  IMU_Board.kicad_pcb  IMU_Board.net  IMU_Board.pro  IMU_Board.sch  IMU_Board.step  sym-lib-table
Mechanical/: AOZBuck1.SLDPRT  BUD Box.SLDASM  BUD PN-1312.step  Base.sldprt  Board Outline.FCStd  Board Outline.FCStd1  Bottom PCB Holder v2.SLDPRT  Bottom PCB Holder v2.STL  Bottom PCB Holder.SLDPRT  Bottom PCB Holder.STL  Cover.sldprt  FTSH-105-01-L-D-K.stp  IMU_Board.SLDPRT  PZ_LED_SMD_PLCC4.stp  Raspberry Pi Zero Outline.FCStd  Raspberry Pi Zero Outline.FCStd1  Top PCB Holder.SLDPRT  Top PCB Holder.STL  big_board_outline.dxf  board_outline.dxf  hb91421.dxf  hb91430.dxf  hb91431.dxf  ~$LaserBodyRoll assembly.SLDPRT
Software/: Software.cywrk  Software.cywrk.nbutts
scripts/: supercap_charge.py
software/lava/application/: CMakeLists.txt
software/lava/application/src/: main.c  main.cpp  stm32f3xx_hal_msp.c  stm32f3xx_it.c
software/lava/fwimages/: CMakeLists.txt
software/lava/imagegen/: CMakeLists.txt
software/lava/imagegen/include/imagegen/: LzmaDeflate.h
software/lava/imagegen/include/lzma/: LzmaEnc.h
software/lava/imagegen/src/: main.cpp
software/lava/imagegen/src/imagegen/: LzmaDeflate.cpp
software/lava/imagegen/src/lzma/: LzFind.c  LzmaEnc.c
software/lava/libBLE/: CMakeLists.txt
software/lava/libBLE/include/: ble_protocol.h
software/lava/libBLE/src/: ble_protocol.c
software/lava/libcrc/: CMakeLists.txt
software/lava/libembedded/: CMakeLists.txt
software/lava/libembedded/include/embedded/device/: ChipSelect.h  ChipSelect.hpp
software/lava/libembedded/include/embedded/memory/: IMemory.h  NVSection.h
software/lava/libembedded/include/embedded/memory/winbond/: NORFlash.h
software/lava/libembedded/include/embedded/micro/adapter/: DSP.h
software/lava/libembedded/include/embedded/micro/interface/: IAnalogs.h  IDAC.h  IFlash.h  IGPIO.h  ISPI.h  ITickTimer.h  ITimer.h
software/lava/libembedded/include/embedded/micro/stm32/: Analogs.h  CriticalSection.h  DMA.h  DigitalToAnalog.h  GPIO.h  I2C.h  Interrupt.h  SPI.h  SPIInterface.h  SysTickTimer.h  Timer.h
software/lava/libembedded/include/embedded/sensors/: IRangeFinder.h
software/lava/libembedded/include/embedded/utility/: CircularBufferManager.h
software/lava/libembedded/include/embedded/utility/checksum/crc/: Crc32.h
software/lava/libembedded/include/embedded/utility/checksum/fletcher/: Fletcher.h  Fletcher.hpp
software/lava/libembedded/src/embedded/memory/: NVSection.cpp
software/lava/libembedded/src/embedded/memory/winbond/: NORFlash.cpp
software/lava/libembedded/src/embedded/micro/stm32/: Analogs.cpp  CriticalSection.cpp  DMA.cpp  DigitalToAnalog.cpp  GPIO.cpp  Interrupt.cpp  SPI.cpp  SPIInterface.cpp  SysTickTimer.cpp  Timer.cpp
software/lava/libembedded/src/embedded/utility/checksum/crc/: Crc32.cpp
software/lava/libst/: CMakeLists.txt  Makefile  lava.ioc
software/lava/libst/Drivers/CMSIS/Device/ST/STM32F3xx/Include/: stm32f303xe.h
software/lava/libst/Drivers/STM32F3xx_HAL_Driver/Inc/: stm32f3xx_hal_def.h
software/lava/libst/Drivers/STM32F3xx_HAL_Driver/Src/: stm32f3xx_hal_dac.c
software/lava/libst/Inc/: libst_config.h  main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
software/lava/libst/Src/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
software/lava/libvl53l0x/: CMakeLists.txt
software/lava/libvl53l0x/Api/platform/inc/: vl53l0x_i2c_platform.h
software/lava/libvl53l0x/Api/platform/src/: vl53l0x_i2c_stm_comms.c  vl53l0x_platform.c
software/lava/libvl53l0x/include/: vl53l0x.h
software/lava/libvl53l0x/src/: vl53l0x.cpp
software/lava/ut/: CMakeLists.txt
software/lava/ut/include/appareo/massflow/mock/: MockMicSelector.h
software/lava/ut/include/appareo/micro/interface/fake/: FakeGPIO.h
software/lava/ut/include/appareo/micro/interface/mock/: MockPDMReceiver.h
software/lava/ut/include/embedded/memory/: Memory_fs.h  Memory_mock.h
software/lava/ut/include/embedded/micro/interface/fake/: FakeGPIO.h
software/lava/ut/scripts/: plot_filter_test.py
software/lava/ut/src/: AbercrombieJ1939Name_ut.cpp  ApplicationHeader_ut.cpp  BLEProtocol_ut.cpp  Crc32_ut.cpp  ImageHeader_ut.cpp  NVSection_ut.cpp  NodeAddress_ut.cpp  RebootCommandParser_ut.cpp  TemperaturePressureMessage_UT.cpp  generateFFTPlots.py  test.cpp
software/lava/ut/src/appareo/micro/stm32f4/fake/: Timer_fake.cpp
software/lava/ut/src/appareo/utility/filters/: Kalman_ut.cpp  kalman_input1.csv  kalman_output1.csv
software/lava/ut/src/libshadow/: ShadowRAM_ut.cpp
software/lava/ut/src/messagePassing/: AppVersion_ut.cpp  BootVersion_ut.cpp  BootblockEntry_ut.cpp  J1939Address_ut.cpp
software/pi/libLaser/: CMakeLists.txt  toolchain.txt
software/pi/libLaser/include/: vl53l0x.h
software/pi/libLaser/src/: libentry.cpp  vl53l0x.cpp  vl53l0x_i2c_platform.c  vl53l0x_platform.c
software/pi/libReprogram/: CMakeLists.txt
software/pi/libReprogram/include/: cybtldr_api.h  cybtldr_api2.h  cybtldr_command.h  cybtldr_parse.h  cybtldr_utils.h
software/pi/libReprogram/src/: cybtldr_api.c  cybtldr_api2.c  cybtldr_command.c  cybtldr_parse.c
software/pi/reprogram_psoc/: CMakeLists.txt
software/pi/reprogram_psoc/include/: reprogram_logic.h
software/pi/reprogram_psoc/src/: main.cpp  reprogram_logic.cpp  reprogram_psoc.cpp
(+342 files in other folders)
